- add master pom for Java based services and docker image generation option for each of them - update docker-compose.yml with the new images